--- a/style.css
+++ b/style.css
@@ -6,7 +6,11 @@ body{
 h1{
     font-size: 50px;
 }
-.name-highlight{
+
+h2{
+    font-size: 40px;
+}
+.orange-highlight{
     color: orange;
 }
 .half-width{
@@ -28,6 +32,7 @@ h1{
 
 section{
     height:500px;
+    padding-bottom: 100px;
 }
 
 .link-button{
@@ -37,4 +42,39 @@ section{
     border-radius: 5px;
     color: white;
     font-weight: bold;
+}
+
+.dream-area{
+    background-image:url("picture/dream-bg.png") ;
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 70%;
+    background-color: white;
+}
+
+.experience{
+    background-image: url("picture/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position:left;
+}
+
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato) ;
+    border-image-slice: 1;
+}
+
+#baby-web{
+    border-left:solid 7px;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+
+footer{
+    text-align: center;
 }
